[metadata]
name = py-demo
version = 0.0.3
description = Minimal Python Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cfclrk/py-demo
project_urls =
  Source = https://github.com/cfclrk/py-demo
  Tracker =  https://github.com/cfclrk/py-demo/issues

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
py_demo.data_files = *

[options.extras_require]
dev =
  black
  flake8
  isort
  mypy
  pytest

[options.entry_points]
console_scripts =
  py-demo = py_demo.main:cli

[flake8]
# Black recommends a line length of 88
max-line-length = 88

[mypy]
ignore_missing_imports = true

[isort]
# Make isort compatible with black
line-length = 88
multi_line_output = 3
include_trailing_comma = true
